quotes added, formatting changed, color scheme changed

--- a/index.html
+++ b/index.html
@@ -58,10 +58,9 @@
 			</div>
 		</div>
 
-
 		<!-- resume -->
-		<div class="dark-section">
-			<!-- <div class="container"> -->
+		<div class="resume-section">
+			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<a name="resume"></a>
@@ -76,105 +75,104 @@
 					</div>
 				</div>
 				<div class="row resume">
-					<div class="col-l-4 col-md-4 col-sm-6 skills">
-						<h3><i class="fa fa-cogs"></i>Skills</h3>
-						<ul>
-							<li>JavaScript (jQuery, AngularJS, React)</li>
-							<li>Python</li>
-							<li>NodeJS (Express, Pug/Jade, EJS)</li>
-							<li>HTML5</li>
-							<li>CSS3</li>
-							<li>Bootstrap / Materialize / Sass</li>
-							<li>Clojure (ClojureScript)</li>
-							<li>Django (Django Rest Framework- DRF)</li>
-							<li>SQL / MySQL</li>
-							<li>PostgreSQL / Knex</li>
-							<li>MongoDB</li>
-							<li>Git</li>
-							<li>Heroku / Surge</li>
-							<li>Test-Driven Development- TDD</li>
-							<li>Single Page Applications- SPA</li>
-							<li>Product / Project / Program Management</li>
-							<li>Agile Workflows</li>
-							<li>Pair Programming</li>
-							<li>Object-Oriented Programming</li>
-							<li>UX/UI Design</li>
-							<li>Wireframing</li>
-							<li>Data-Driven Design</li>
-							<li>SketchApp</li>
-							<li>Balsamiq</li>
-							<li>Marketing / Branding / Designing</li>
-							<li>Google Analytics</li>
-						</ul>
+					<div class="col-lg-5 col-md-5 col-sm-6 col-lg-offset-1 col-md-offset-1 skills">
+							<h3><i class="fa fa-cogs"></i>Skills</h3>
+							<ul>
+								<li>JavaScript (jQuery, AngularJS, React)</li>
+								<li>Python</li>
+								<li>NodeJS (Express, Pug/Jade, EJS)</li>
+								<li>HTML5</li>
+								<li>CSS3</li>
+								<li>Bootstrap / Materialize / Sass</li>
+								<li>Clojure (ClojureScript)</li>
+								<li>Django (Django Rest Framework- DRF)</li>
+								<li>SQL / MySQL</li>
+								<li>PostgreSQL / Knex</li>
+								<li>MongoDB</li>
+								<li>Git</li>
+								<li>Heroku / Surge</li>
+								<li>Test-Driven Development- TDD</li>
+								<li>Single Page Applications- SPA</li>
+								<li>Product / Project / Program Management</li>
+								<li>Agile Workflows</li>
+								<li>Pair Programming</li>
+								<li>Object-Oriented Programming</li>
+								<li>UX/UI Design</li>
+								<li>Wireframing</li>
+								<li>Data-Driven Design</li>
+								<li>SketchApp</li>
+								<li>Balsamiq</li>
+								<li>Marketing / Branding / Designing</li>
+								<li>Google Analytics</li>
+							</ul>
+						</br>
+						<div class="education">
+							<h3><i class="fa fa-graduation-cap"></i>Education</h3>
+							<h4>Galvanize | Full-Stack Development Immersive</h4>
+							<p class="title">February 2016 - July 2016</p>
+							<ul>
+								<li>Full-stack Development Fellow</li>
+							</ul>
+							<h4>TCC | Computer Science</h4>
+							<p class="title">Jan 2015 - December 2015</p>
+							<ul>
+								<li>Programming Certification in JavaScript basics, Microfost Office Suite and SQL / MySQL</li>
+							</ul>
+							<h4>Old Dominion University | Philosophy</h4>
+							<p class="title">August 2008 - December 2014</p>
+							<ul>
+								<li>Pi Beta Phi Fraternity</li>
+							</ul>
+						</div>
 					</div>
-
-					<div class="col-l-4 col-md-4 col-sm-6 experience">
+					<div class="col-lg-5 col-md-5 col-sm-6 experience">
 						<h3><i class="fa fa-suitcase"></i>Experience</h3>
 						<h4>Software Developer / Product Owner</h4>
 						<p class="title">ReUP Distribution | September 2016 - January 2017
-						<ul>
-							<li>Consult on domain knowledge of ecommerce distribution channels to increase user acquisition metrics by over 300%</li>
-							<li>Perform formal user research and present findings to set feature development priorities</li>
-							<li>Adhere to TDD by cleaning up existing codebase and writing integration tests</li>
-						</ul>
+							<ul>
+								<li>Consult on domain knowledge of ecommerce distribution channels to increase user acquisition metrics by over 300%</li>
+								<li>Perform formal user research and present findings to set feature development priorities</li>
+								<li>Adhere to TDD by cleaning up existing codebase and writing integration tests</li>
+							</ul>
 						<h4>Web Developer / Consultant / Freelance Contractor</h4>
 						<p class="title">Self Employed | May 2016 - Present
-						<ul>
-							<li>Network with small to medium sized companies to consult on business goals and current technologies</li>
-							<li>Strategize reasonable action plans to achieve results through user research, marketing, and branding practices</li>
-							<li>Utilize Full Stack skillset and previous industry knowledge to successfully turn client projects into shippable products</li>
-						</ul>
+							<ul>
+								<li>Network with small to medium sized companies to consult on business goals and current technologies</li>
+								<li>Strategize reasonable action plans to achieve results through user research, marketing, and branding practices</li>
+								<li>Utilize Full Stack skillset and previous industry knowledge to successfully turn client projects into shippable products</li>
+							</ul>
 						<h4>Full-Stack Development Resident</h4>
 						<p class="title">Galvanize | February 2016 - July 2016
-						<ul>
-							<li>Design, develop, and deploy mobile and web applications</li>
-							<li>Participate in Hackathons, technical projects, and coding challenges</li>
-							<li>Regularly learn new languages and technologies</li>
-						</ul>
+							<ul>
+								<li>Design, develop, and deploy mobile and web applications</li>
+								<li>Participate in Hackathons, technical projects, and coding challenges</li>
+								<li>Regularly learn new languages and technologies</li>
+							</ul>
 						<h4>Lead Product Coordinator</h4>
 						<p class="title">TJx Companies | July 2015 - December 2015
-						<ul>
-							<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
-							<li>Decreased turnover rates by providing team members with an empathetic workplace</li>
-						</ul>
+							<ul>
+								<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
+								<li>Decreased turnover rates by providing team members with an empathetic workplace</li>
+							</ul>
 						<h4>Product/Project Coordinator</h4>
 						<p class="title">Whole Foods Market | November 2012 - December 2015
-						<ul>
-							<li>Worked with Regional and Global teams to implement 4 full-department resets, improving customer-experience and increasing department sales</li>
-							<li>Analyzed metrics and consumer behavior, identifying areas with opportunity for growth</li>
-							<li>Guided teams to develop proactive strategies/procedures and execute new department practices to build add-on sales, increase basket-size, improve merchandising standards and minimize waste</li>
-						</ul>
+							<ul>
+								<li>Worked with Regional and Global teams to implement 4 full-department resets, improving customer-experience and increasing department sales</li>
+								<li>Analyzed metrics and consumer behavior, identifying areas with opportunity for growth</li>
+								<li>Guided teams to develop proactive strategies/procedures and execute new department practices to build add-on sales, increase basket-size, improve merchandising standards and minimize waste</li>
+							</ul>
 						<h4>Wine Buyer</h4>
 						<p class="title">Whole Foods Market | November 2012 - December 2015
-						<ul>
-							<li>Analyzed department metrics to notably increase profit margins by marketing, utilizing merchandising best-practices, and creating interactive programs for team memebers and customers</li>
-							<li>Coordinated weekly multi-department wine-tasting events to host upwards of 300+ participants</li>
-							<li>Expanded inventory by 50% in a 3 week period without disrupting open-to-buy or other metrics</li>
-							<li>Decreased department’s shrink metric by over 30% in a 2-week period by creating manageable traceability practices</li>
-							<li>Constructed marketing plan to increase event participation and engagement, tripling previous attendance records</li>
-							<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
-						</ul>
+							<ul>
+								<li>Analyzed department metrics to notably increase profit margins by marketing, utilizing merchandising best-practices, and creating interactive programs for team memebers and customers</li>
+								<li>Coordinated weekly multi-department wine-tasting events to host upwards of 300+ participants</li>
+								<li>Expanded inventory by 50% in a 3 week period without disrupting open-to-buy or other metrics</li>
+								<li>Decreased department’s shrink metric by over 30% in a 2-week period by creating manageable traceability practices</li>
+								<li>Constructed marketing plan to increase event participation and engagement, tripling previous attendance records</li>
+								<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
+							</ul>
+						</div>
 					</div>
-
-					<div class="col-l-4 col-md-4 col-sm-6 education">
-						<h3><i class="fa fa-graduation-cap"></i>Education</h3>
-						<h4>Galvanize | Full-Stack Development Immersive</h4>
-						<p class="title">February 2016 - July 2016</p>
-						<ul>
-							<li>Full-stack Development Fellow</li>
-						</ul>
-						<h4>TCC | Computer Science</h4>
-						<p class="title">Jan 2015 - December 2015</p>
-						<ul>
-							<li>Programming Certification in JavaScript basics, Microfost Office Suite and SQL / MySQL</li>
-						</ul>
-						<h4>Old Dominion University | Philosophy</h4>
-						<p class="title">August 2008 - December 2014</p>
-						<ul>
-							<li>Pi Beta Phi Fraternity</li>
-						</ul>
-					</div>
-
 				</div>
 			</div>
 		</div>
@@ -262,18 +260,64 @@
 			</div>
 		</div>
 
-		<!-- quote carosel -->
-		<!--  maybe move this carosel to right below the header-->
-		<!-- <div class="quote-section">
+		<!-- quote carousel -->
+		<div class="quote-section">
 			<div class="row">
-				<div class="col-md-8 col-md-offset-2">
-					<blockquote class="quote-one">
-						<p class="lead"><span class="quotation">&ldquo;</span>I worked alongside Morgen at Galvanize, and from the beginning I was impressed with her tenacity and commitment to delivering user-driven products. She is not afraid to seek out diverse opinions and consistently challenges herself and others to raise the bar in delivering meaningful user experiences.<span class="quotation">&rdquo;</span></p>
-						<footer>Amy Conchie, <cite title="Source Title">Software Engineer</cite></footer>
-					</blockquote>
+
+					<div id="text-carousel" class="carousel container slide" data-ride="carousel">
+					  <div class="row">
+					    <div class="col-xs-offset-3 col-xs-6">
+					      <div class="carousel-inner">
+
+					        <div class="item active">
+					          <div class="carousel-content">
+					            <div class="quote-item">
+					              <div class="row">
+					                <blockquote class="quote-one">
+					                  <p><span class="quotation">&ldquo;</span>I worked alongside Morgen at Galvanize, and from the beginning I was impressed with her tenacity and commitment to delivering user-driven products. She is not afraid to seek out diverse opinions and consistently challenges herself and others to raise the bar in delivering meaningful user experiences.<span class="quotation">&rdquo;</span></p>
+					                  <footer>Amy Conchie, <cite title="Source Title">Software Engineer</cite></footer>
+					                </blockquote>
+					              </div>
+					            </div>
+					          </div>
+					        </div>
+									<div class="item">
+                    <div class="carousel-content">
+                      <div class="quote-item">
+                        <div class="row">
+                          <blockquote class="quote-one">
+                            <p class="lead"><span class="quotation">&ldquo;</span>Morgen is an ambitious individual with a great attitude and sense of team. She has an inquisitive mind and is constantly on the lookout for problems that need solving. Amongst her peers, she is always the organizing force regularly moving things forward.<span class="quotation">&rdquo;</span></p>
+                            <footer>Adam Lichty, <cite title="Source Title">Full-stack Instructor</cite></footer>
+                          </blockquote>
+                        </div>
+                      </div>
+                    </div>
+                	</div>
+                	<div class="item">
+                    <div class="carousel-content">
+                      <div class="quote-item">
+                        <div class="row">
+                          <blockquote class="quote-one">
+                            <p class="lead"><span class="quotation">&ldquo;</span>Morgen is an intelligent, hard working, communicative, and goal oriented individual.  She is excellent at breaking down a project into workable stages while still keeping her eye on the big picture.  She's always thinking of ways to improve what she's building and never settles for average when it comes to her products.<span class="quotation">&rdquo;</span></p>
+                            <footer>Eddie Burgess, <cite title="Source Title">Lead Web Developer</cite></footer>
+                          </blockquote>
+                        </div>
+                      </div>
+                    </div>
+                	</div>
+					      </div>
+					    </div>
+					  </div>
+					  <a class="left carousel-control" href="#text-carousel" data-slide="prev">
+					    <span class="glyphicon glyphicon-chevron-left"></span>
+					  </a>
+					  <a class="right carousel-control" href="#text-carousel" data-slide="next">
+					    <span class="glyphicon glyphicon-chevron-right"></span>
+					  </a>
+					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 
 		<!-- contact -->
 		<div class="contact-section">
