--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                       <div class="quote-item">
                         <div class="row">
                           <blockquote class="quote-one">
-                            <p class="lead"><span class="quotation">&ldquo;</span>Morgen is an ambitious individual with a great attitude and sense of team. She has an inquisitive mind and is constantly on the lookout for problems that need solving. Amongst her peers, she is always the organizing force regularly moving things forward.<span class="quotation">&rdquo;</span></p>
+                            <p><span class="quotation">&ldquo;</span>Morgen is an ambitious individual with a great attitude and sense of team. She has an inquisitive mind and is constantly on the lookout for problems that need solving. Amongst her peers, she is always the organizing force regularly moving things forward.<span class="quotation">&rdquo;</span></p>
                             <footer>Adam Lichty, <cite title="Source Title">Full-stack Instructor</cite></footer>
                           </blockquote>
                         </div>
@@ -298,7 +298,7 @@
                       <div class="quote-item">
                         <div class="row">
                           <blockquote class="quote-one">
-                            <p class="lead"><span class="quotation">&ldquo;</span>Morgen is an intelligent, hard working, communicative, and goal oriented individual.  She is excellent at breaking down a project into workable stages while still keeping her eye on the big picture.  She's always thinking of ways to improve what she's building and never settles for average when it comes to her products.<span class="quotation">&rdquo;</span></p>
+                            <p><span class="quotation">&ldquo;</span>Morgen is an intelligent, hard working, communicative, and goal oriented individual.  She is excellent at breaking down a project into workable stages while still keeping her eye on the big picture.  She's always thinking of ways to improve what she's building and never settles for average when it comes to her products.<span class="quotation">&rdquo;</span></p>
                             <footer>Eddie Burgess, <cite title="Source Title">Lead Web Developer</cite></footer>
                           </blockquote>
                         </div>
