resume section finished

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 	<!-- footer -->
 		<div class="page-footer">
 			<div class="container text-center">
-				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Remote</p>
+				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Sacramento | Remote</p>
 			</div>
 		</div>
 	</body>
