portfolio section finished

--- a/index.html
+++ b/index.html
@@ -177,7 +177,6 @@
 			</div>
 		</div>
 
-
 		<!-- portfolio -->
 		<div class="portfolio-section">
 			<div class="container text-center">
@@ -198,7 +197,7 @@
 							<h3>RideSurf</h3>
 				      <div class="caption">
 				        <p>RideSurf is a mobile / web app connecting people with active lifestyles to a secure car-sharing service on the basis of mutual activities.</p>
-				        <p><a href="portfolio-4.html" class="btn btn-default" role="button">Product Strategy</a></p>
+				        <p><a href="portfolio-4.html" class="btn piece-btn btn-default" role="button">Product Strategy</a></p>
 				      </div>
 				    </div>
 				  </div>
@@ -216,7 +215,7 @@
 							<h3>The B.R.N.</h3>
 				      <div class="caption">
 				        <p>The Bootcamp Resource Network is a platform for connecting Technical Bootcamp graduates to short-term contracts to build their professional portfolios.</p>
-				        <p><a href="portfolio-1.html" class="btn btn-default" role="button">Wireframing</a></p>
+				        <p><a href="portfolio-1.html" class="btn piece-btn btn-default" role="button">Wireframing</a></p>
 				      </div>
 				    </div>
 				  </div>
@@ -234,7 +233,7 @@
 							<h3>Confident Bagel</h3>
 				      <div class="caption">
 				        <p>Confident Bagel is a web application that runs a Sentiment Analysis on any given Twitter hashtag and displays visually appealing results.</p>
-				        <p><a href="portfolio-3.html" class="btn btn-default" role="button">Twittersphere</a></p>
+				        <p><a href="portfolio-3.html" class="btn piece-btn btn-default" role="button">Twittersphere</a></p>
 				      </div>
 				    </div>
 				  </div>
@@ -252,7 +251,7 @@
 							<h3>Troviamo</h3>
 				      <div class="caption">
 				        <p>Troviamo is a scavenger hunt application utilizing geolocation and a consumer's need for adventure.</br></p>
-				        <p><a href="portfolio-2.html" class="btn btn-default" role="button">Mobile App</a></p>
+				        <p><a href="portfolio-2.html" class="btn piece-btn btn-default" role="button">Mobile App</a></p>
 				      </div>
 				    </div>
 					</div>
@@ -263,12 +262,10 @@
 		<!-- quote carousel -->
 		<div class="quote-section">
 			<div class="row">
-
 					<div id="text-carousel" class="carousel container slide" data-ride="carousel">
 					  <div class="row">
 					    <div class="col-xs-offset-3 col-xs-6">
 					      <div class="carousel-inner">
-
 					        <div class="item active">
 					          <div class="carousel-content">
 					            <div class="quote-item">
@@ -355,7 +352,7 @@
 			</div>
 		</div>
 
-	<!-- footer -->
+		<!-- footer -->
 		<div class="page-footer">
 			<div class="container text-center">
 				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Sacramento | Remote</p>
