--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 				<div class="col-md-10 col-md-offset-1">
 					<a name="about"></a>
 					<h2>ABOUT</h2>
-					<p>I am a full-stack web developer with over 10 years of experience in product knowledge, product education, retail and ecommerce, and consumer-based industries. I enjoy networking, B2C industries, analyzing consumer behahior, creating seamless user experiences through clean code and simple interfaces, and challenging myself with meaningful projects.  I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.  I love mapping out ideas and features on the whiteboard, and I am obsessed with how consumers interact with product.  I take pride in what I do, and I consistently produce results.</p>
+					<p>I am a Product/Program enthusiast with over a decade of experience in product knowledge, product education, program marketing, and vendor and user relationships.  I am a natural networker with an entrepreneurial spirit and an affinity for creating relationships across barriers of industry and interests; I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.
+						I enjoy bringing people together and creating community in the things that I stand behind.
+						I love mapping out ideas and features on one of the five whiteboards I have lining my walls at home.
+						You can find me riding my single-speed around the city, hiking with my dog, or curating my next playlist.I am obsessed with how consumers interact with product.</p>
 				</div>
 			</div>
 		</div>
