resume changed, tweaked to pdf

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 						<h2>RESUME</h2>
 						<div class="resume_download">
 							<button type="button" name="button">
-								<a href="Morgen_Fett_Resume.docx" download="Morgen_Fett_Resume.docx">
+								<a href="Morgen_Fett_Resume.pdf" download="Morgen_Fett_Resume.pdf">
 									<i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my Resume
 								</a>
 							</button>
