--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<div class="col-md-10 col-md-offset-1">
 					<a name="about"></a>
 					<h2>ABOUT</h2>
-					<p>I am a Product/Program enthusiast with over a decade of experience in product knowledge, product education, program marketing, and vendor and user relationships.  I am obsessed with how consumers interact with product.  I am a natural networker with an entrepreneurial spirit and an affinity for creating relationships across barriers of industry and interests.  I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.  When I am not working, you can find me riding my single-speed around the city, hiking with my dog, or curating my next playlist.</p>
+					<p>Product/Program enthusiast with over a decade of experience in product knowledge, product education, program marketing, and vendor and user relationships; I am obsessed with how consumers interact with product.  I'm a natural networker with an entrepreneurial spirit and an affinity for creating relationships across barriers of industry and interests.  I am a visual and analytical thinker, communicative problem solver, and team player with confidence to take the lead.  When not working, you can find me riding my single-speed around the city, hiking with my dog, or curating my next playlist.</p>
 				</div>
 			</div>
 		</div>
@@ -124,8 +124,22 @@
 							</ul>
 						</div>
 					</div>
+
 					<div class="col-lg-5 col-md-5 col-sm-6 experience">
 						<h3><i class="fa fa-suitcase"></i>Experience</h3>
+						<h4>CEO / Designer / Developer / Creative</h4>
+						<p class="title">Pamplemousse Technology & Consulting | May 2016 - Present
+							<ul>
+								<li>Network with small to medium sized companies to consult on business goals and current technologies</li>
+								<li>Strategize action plans to achieve results through user research, marketing and branding</li>
+								<li>Utilize full-stack skill-set and previous industry knowledge to successfully turn client projects into shippable products</li>
+							</ul>
+							<h4>Product/Program Manager</h4>
+							<p class="title">Contract- Remote | January 2017 - April 2017
+								<ul>
+									<li>-Researched technologies, strategized process, implemented best practices, and established Agile methodologies across 7+ teams for a scalable SaaS company in the Green Energy field</li>
+									<li>Designed content for deliverables, including but not limited to: BPM mapping, Gantt charts, data structures, user stories, Kanban cards, style guide, wireframes, and prototypes</li>
+								</ul>
 						<h4>Software Developer / Product Owner</h4>
 						<p class="title">ReUP Distribution | September 2016 - January 2017
 							<ul>
@@ -151,7 +165,6 @@
 						<p class="title">TJx Companies | July 2015 - December 2015
 							<ul>
 								<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
-								<li>Decreased turnover rates by providing team members with an empathetic workplace</li>
 							</ul>
 						<h4>Product/Project Coordinator</h4>
 						<p class="title">Whole Foods Market | November 2012 - December 2015
@@ -164,10 +177,10 @@
 						<p class="title">Whole Foods Market | November 2012 - December 2015
 							<ul>
 								<li>Analyzed department metrics to notably increase profit margins by marketing, utilizing merchandising best-practices, and creating interactive programs for team memebers and customers</li>
-								<li>Coordinated weekly multi-department wine-tasting events to host upwards of 300+ participants</li>
+								<li>Coordinated weekly multi-department events to host upwards of 300+ participants</li>
 								<li>Expanded inventory by 50% in a 3 week period without disrupting open-to-buy or other metrics</li>
 								<li>Decreased department’s shrink metric by over 30% in a 2-week period by creating manageable traceability practices</li>
-								<li>Constructed marketing plan to increase event participation and engagement, tripling previous attendance records</li>
+								<li>Constructed marketing campaigns to increase event participation and engagement, increasing previous attendance records by 500%</li>
 								<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
 							</ul>
 						</div>
