willing to work updated

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 		<!-- footer -->
 		<div class="page-footer">
 			<div class="container text-center">
-				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | San Fransicso | Long Beach | Sacramento | Remote</p>
+				<p>Willing to work in:</br>Seattle | Bellevue | Redmond | Long Beach | New York | Austin | Remote</p>
 			</div>
 		</div>
 	</body>
