--- a/index.html
+++ b/index.html
@@ -147,17 +147,10 @@
 								<li>Perform formal user research and present findings to set feature development priorities</li>
 								<li>Adhere to TDD by cleaning up existing codebase and writing integration tests</li>
 							</ul>
-						<h4>Web Developer / Consultant / Freelance Contractor</h4>
-						<p class="title">Self Employed | May 2016 - Present
-							<ul>
-								<li>Network with small to medium sized companies to consult on business goals and current technologies</li>
-								<li>Strategize reasonable action plans to achieve results through user research, marketing, and branding practices</li>
-								<li>Utilize Full Stack skillset and previous industry knowledge to successfully turn client projects into shippable products</li>
-							</ul>
 						<h4>Full-Stack Development Resident</h4>
 						<p class="title">Galvanize | February 2016 - July 2016
 							<ul>
-								<li>Design, develop, and deploy mobile and web applications</li>
+								<li>Design, develop, and deploy mobile and web applications (see Projects section)</li>
 								<li>Participate in Hackathons, technical projects, and coding challenges</li>
 								<li>Regularly learn new languages and technologies</li>
 							</ul>
