--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<ul class="nav navbar-nav navbar-right">
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#resume">RESUME</a></li>
-						<li><a href="#portfolio">PORTFOLIO</a></li>
+						<li><a href="#portfolio">CASE STUDIES</a></li>
 						<li><a href="#contact">CONTACT</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-left">
@@ -123,6 +123,25 @@
 								<li>Pi Beta Phi Fraternity</li>
 							</ul>
 						</div>
+
+						<div class="projects">
+							<h3><i class="fa fa-diamond"></i>Projects</h3>
+							<h4>Galvanize | Full-Stack Development Immersive</h4>
+							<p class="title">February 2016 - July 2016</p>
+							<ul>
+								<li>Full-stack Development Fellow</li>
+							</ul>
+							<h4>TCC | Computer Science</h4>
+							<p class="title">Jan 2015 - December 2015</p>
+							<ul>
+								<li>Programming Certification in JavaScript basics, Microfost Office Suite and SQL / MySQL</li>
+							</ul>
+							<h4>Old Dominion University | Philosophy</h4>
+							<p class="title">August 2008 - December 2014</p>
+							<ul>
+								<li>Pi Beta Phi Fraternity</li>
+							</ul>
+						</div>
 					</div>
 
 					<div class="col-lg-5 col-md-5 col-sm-6 experience">
@@ -185,7 +204,7 @@
 		<div class="portfolio-section">
 			<div class="container text-center">
 				<a name="portfolio"></a>
-				<h2>PORTFOLIO</h2>
+				<h2>CASE STUDIES</h2>
 				<div class="row">
 				  <div class="col-l-3 col-md-3 col-sm-6">
 				    <div class="thumbnail">
