--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@
 								</a>
 							</button>
 						</div>
+						<div class="manual_download">
+							<button type="button" name="button">
+								<a href="HowToWorkWithMeManual.pdf" download="HowToWorkWithMeManual.pdf">
+									<i class="fa fa-download fa-lg" aria-hidden="true"></i> Download my "How to Work with Me Manual"
+								</a>
+							</button>
+						</div>
 					</div>
 				</div>
 				<div class="row resume">
