--- a/case_study_energysquad.html
+++ b/case_study_energysquad.html
@@ -30,13 +30,11 @@
         <div class="row">
           <div class="col-md-6">
             <h2>Description</h2>
-            <p>As a PM for a SaaS Company in the Green Energy space, I spent a fair amount of time doing reasearch into current processes.  I would create User Stories and identify deliverables for </p>
+            <p>As a PM for a SaaS Company in the Green Energy space, I spent a fair amount of time doing reasearch into current processes.  I would create User Stories and identify deliverables for different in-house developed applications.  One in particular was a Photo Application, where a verbose amount of photo requirements needed to be defined in an orderly fashion.</p>
           </div>
           <div class="col-md-6">
             <h2>Technologies</h2>
-            <p>RideSurf was developed using Python, JavaScript, jQuery, PostgeSQL, Materialize, Flask, destination and activity matching, routing algorithms and a ranking/recommendation system.</p>
-						<p>Live at: <a class="outgoing" href="https://ridesurf.github.io/">https://ridesurf.github.io/</a></p>
-						<p>GitHub: <a class="outgoing" href="https://github.com/RideSurf">https://github.com/RideSurf</a></p>
+            <p>The end product was developed using Angular and Amazon's AWS platform.  The requirements shown below were mapped out using Mindmeister- a lightweight mind-mapping software.</p>
           </div>
         </div>
         <div class="row">
