--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#resume">RESUME</a></li>
 						<li><a href="#portfolio">CASE STUDIES</a></li>
-						<li><a href="#contact">CONTACT</a></li>
+						<!-- <li><a href="#contact">CONTACT</a></li> -->
 					</ul>
 					<ul class="nav navbar-nav navbar-left">
 						<!--TODO: when navbar collapses, maket these show up as 'LinkedIn' 'GitHub' 'Instagram'-->
@@ -129,7 +129,7 @@
 								<li>Pi Beta Phi Fraternity</li>
 							</ul>
 						</div>
-
+					</br>
 						<div class="projects">
 							<h3><i class="fa fa-diamond"></i>Projects</h3>
 							<h4>Galvanize | Full-Stack Development Immersive</h4>
