--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<li><a href="#about">ABOUT</a></li>
 						<li><a href="#resume">RESUME</a></li>
 						<li><a href="#portfolio">CASE STUDIES</a></li>
-						<!-- <li><a href="#contact">CONTACT</a></li> -->
+						<li><a href="#contact">CONTACT</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-left">
 						<!--TODO: when navbar collapses, maket these show up as 'LinkedIn' 'GitHub' 'Instagram'-->
