past wfm update

--- a/index.html
+++ b/index.html
@@ -184,21 +184,21 @@
 							<ul>
 								<li>Managed team to process and merchandise 8+ trucks of product daily for most profitable TJMaxx / HomeGoods in the country</li>
 							</ul>
-						<h4>Product/Project Coordinator</h4>
-						<p class="title">Whole Foods Market | November 2012 - December 2015
-							<ul>
-								<li>Worked with Regional and Global teams to implement 4 full-department resets, improving customer-experience and increasing department sales</li>
-								<li>Analyzed metrics and consumer behavior, identifying areas with opportunity for growth</li>
-								<li>Guided teams to develop proactive strategies/procedures and execute new department practices to build add-on sales, increase basket-size, improve merchandising standards and minimize waste</li>
-							</ul>
 						<h4>Wine Buyer</h4>
 						<p class="title">Whole Foods Market | November 2012 - December 2015
 							<ul>
-								<li>Coordinated weekly multi-department events to host upwards of 300+ participants</li>
-								<li>Expanded inventory by 50% in a 3 week period without disrupting open-to-buy or other metrics</li>
-								<li>Decreased department’s shrink metric by over 30% in a 2-week period by creating manageable traceability practices</li>
-								<li>Constructed marketing campaigns to increase event participation and engagement, increasing previous attendance records by 500%</li>
-								<li>Built relationships with new suppliers and brands to expand sub-departments and successfully increased consumer engagement</li>
+								<li>-Coordinated multi-department events, hosting upwards of 300+ participants per week.</li>
+								<li>Constructed marketing campaigns to increase program participation and engagement, increasing previous attendance records by 500% over four months.</li>
+								<li>Created customized wine curricula for monthly educational programs.</li>
+								<li>Expanded inventory by 50% in a three-week period.</li>
+								<li>Decreased department’s shrink metric over 30% in a two-week period by creating manageable inventory practices.</li>
+							</ul>
+						<h4>Product Coordinator</h4>
+						<p class="title">Whole Foods Market | November 2012 - December 2015
+							<ul>
+								<li>Worked with Regional and Global teams to implement four full-department resets, improving department sales 15-23%.</li>
+								<li>Built relationships with new suppliers and brands to expand five Specialty sub-departments, successfully increasing consumer engagement.</li>
+								<li>Analyzed metrics to develop department-wide strategies- building add-on sales, improving merchandising strategies, and minimizing shrink.</li>
 							</ul>
 						</div>
 					</div>
